# quadrant

./: README.md  README.rst  attiqub.m  attiqub_app.mlapp  attiqub_engine.m  parameters.mat  pyproject.toml  raw_policy1_random.txt  raw_policy2B_greedy_omega.txt  raw_policy2_greedy.txt  raw_policy3_lookahead.txt  raw_policy4_forward.txt
docs/: conf.py  docs_firststep.rst  docs_functions.rst  requirements.txt
resources/project/: ProjectData.type.Info.xml
scenarios/pointing_policy/: ephemeris.csv  plot_demo_results.py  plot_relative_orbits.py  pointing_policy.py  policy1_random.py  policy2B_greedy_omega.py  policy2_greedy.py  policy2a_greedy_angle.py  policy3_lookahead.py  policy4_forward.py  policy5_mctsearch.py  policy_forward.py  policy_lookahead.py
scenarios/pointing_policy_mc/: elements.csv  pointing_policy_mc.py
scenarios/pointing_policy_old/: pointing_policy.py
source/: accel.py  anomaly.py  atmosphere.py  attitudes.py  deputy.py  feedback.py  forces.py  formation.py  integrate.py  rotation.py  spacecraft.py  targeting.py
source/attiqub_att_ctrl/: ctrl_feedback_crp.m  ctrl_feedback_mrp.m  ctrl_feedback_qrt.m  ctrl_response_MPC.m  ctrl_response_PD.m  ctrl_response_PID.m  ctrl_rwmap_full.m
source/attiqub_att_refn/: refn_deputy.m  refn_detumble.m  refn_nadir.m  refn_sunpt.m
source/attiqub_coord_crp/: crp_addition.m  crp_conv2dcm.m  crp_conv2mrp.m  crp_conv2qrt.m  crp_derivative.m  crp_subtraction.m
source/attiqub_coord_dcm/: dcm_conv2crp.m  dcm_conv2mrp.m  dcm_conv2qrt.m  dcm_rotate_x.m  dcm_rotate_y.m  dcm_rotate_z.m  (+2 more)
tests/: test_dynamics.py
(+47 files in other folders)
