[project]
name = "quadrant"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Samuel Y. W. Low", email = "sammmlow@gmail.com"}
]

keywords = [
	"pid",
    "aero",
	"adcs",
	"gyro",
	"astro",
	"orbits",
	"forces",
	"wheels",
	"moments",
	"control",
	"reaction",
	"Lyapunov",
	"attitude",
	"pointing",
    "aerospace",
	"satellite",
	"spacecraft",
    "engineering",
    "astrodynamics"
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
	"Topic :: Scientific/Engineering :: Navigation",
    "Topic :: Scientific/Engineering :: Astronomy"
]

dependencies = [
    "numpy",
    "matplotlib >=2.0"
]